--- a/stage2/02-net-tweaks/files/wpa_supplicant.conf
+++ b/stage2/02-net-tweaks/files/wpa_supplicant.conf
@@ -1,3 +1,11 @@
-country=GB
+country=US
 ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=netdev
 update_config=1
+
+network={
+    ssid="Corvex"
+    psk="ppeRocks!"
+    key_mgmt=WPA-PSK
+    priority=6
+}
+
