Additional updates and network provisioning.

--- a/stage2/03-corvex-adds/files/000-default.conf
+++ b/stage2/03-corvex-adds/files/000-default.conf
@@ -24,4 +24,9 @@ RewriteBase "/"
 RewriteRule "^generate_204$"  "/scripts/generate_204.cgi"
 </Directory>
 
+<Location "/scripts">
+DNSSDServiceTypes _corvex._tcp
+DNSSDServiceName "Corvex Gateway Service"
+</Location>
+
 </VirtualHost>
