Made some configuration changes.

--- a/stage2/03-corvex-adds/files/000-default.conf
+++ b/stage2/03-corvex-adds/files/000-default.conf
@@ -1,6 +1,6 @@
 <VirtualHost *:80>
 
-ServerName CorvexGW01.corvexconnected.com
+ServerName CorvexGW01.local
 
 DocumentRoot /var/www/html
 
@@ -23,10 +23,5 @@ RewriteEngine On
 RewriteBase "/"
 RewriteRule "^generate_204$"  "/scripts/generate_204.cgi"
 </Directory>
-
-<Location "/scripts">
-DNSSDServiceTypes _corvex._tcp
-DNSSDServiceName "Corvex Gateway Service"
-</Location>
 
 </VirtualHost>
