--- a/stage2/02-net-tweaks/files/wpa_supplicant.conf
+++ b/stage2/02-net-tweaks/files/wpa_supplicant.conf
@@ -1,3 +1,13 @@
 country=US
 ctrl_interface=DIR=/var/run/wpa_supplicant GROUP=netdev
 update_config=1
+
+#example configuration
+#network={
+#ssid="SOME_SSID"
+#psk="SOME_PASSWORD"
+#proto=RSN
+#key_mgmt=WPA-PSK
+#pairwise=CCMP
+#auth_alg=OPEN
+#}
