--- a/stage2/04-corvex/files/60-corvex.conf
+++ b/stage2/04-corvex/files/60-corvex.conf
@@ -3,3 +3,4 @@ net.ipv4.tcp_fin_timeout=5
 net.ipv4.tcp_tw_recycle=1
 net.ipv4.tcp_tw_reuse=1
 net.ipv4.ip_local_port_range=15000    65000
+net.ipv6.conf.all.disable_ipv6 = 1
