--- a/stage2/04-corvex/files/000-default.conf
+++ b/stage2/04-corvex/files/000-default.conf
@@ -23,5 +23,24 @@ RewriteEngine On
 RewriteBase "/"
 RewriteRule "^generate_204$"  "/scripts/generate_204.cgi"
 </Directory>
+    ProxyPass "/backend" "http://localhost:12001"
+    ProxyPassReverse "/backend" "http://localhost:12001"
+
+    <Directory "/var/www/html/corvex">
+    AllowOverride All
+Options -Indexes
+RewriteEngine On
+RewriteBase /corvex/
+RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteRule . /corvex/index.html [L]
+    <Files "index.html">
+        FileETag None
+        Header unset ETag
+        Header set Cache-Control "max-age=0, no-cache, no-store, must-revalidate"
+        Header set Pragma "no-cache"
+        Header set Expires "Wed, 11 Jan 1984 05:00:00 GMT"
+    </Files>
+    </Directory>
 
 </VirtualHost>
